--- a/ClientApp/src/app/private/private.component.html
+++ b/ClientApp/src/app/private/private.component.html
@@ -5,13 +5,13 @@
 <div class="wrapper ">
   <div class="sidebar" data-color="white" data-active-color="danger">
     <div class="logo">
-      <a href="https://www.creative-tim.com" class="simple-text logo-mini">
+      <!--<a href="https://www.creative-tim.com" class="simple-text logo-mini">
         <div class="logo-image-small">
           <img src="../assets/img/mike.jpg">
         </div>
-      </a>
+      </a>-->
       <a href="https://www.creative-tim.com" class="simple-text logo-normal">
-        Gleison
+        Mrg Game News
       </a>
     </div>
     <div class="sidebar-wrapper">
@@ -41,8 +41,14 @@
           </a>
         </li>
         <li routerLinkActive="active">
-          <a routerLink="/perfil-usuario">
+          <a routerLink="/jogos">
             <i class="fa-solid fa-dice-five"></i>
+            <p>Perfil usuário</p>
+          </a>
+        </li>
+        <li routerLinkActive="active">
+          <a routerLink="/perfil-usuario">
+            <i class="fa-solid fa-dice-six"></i>
             <p>Perfil usuário</p>
           </a>
         </li>
