--- a/ClientApp/src/app/private/noticias/noticias.component.html
+++ b/ClientApp/src/app/private/noticias/noticias.component.html
@@ -1,1 +1,189 @@
-<p>noticias works!</p>
+<nav class="navbar navbar-expand-lg navbar-absolute fixed-top navbar-transparent">
+  <div class="container-fluid">
+    <div class="navbar-wrapper">
+      <div class="navbar-toggle">
+        <button type="button" class="navbar-toggler">
+          <span class="navbar-toggler-bar bar1"></span>
+          <span class="navbar-toggler-bar bar2"></span>
+          <span class="navbar-toggler-bar bar3"></span>
+        </button>
+      </div>
+      <a class="navbar-brand" href="#" style="margin-left:277px">Noticias</a>
+    </div>
+  </div>
+</nav>
+<br />
+<div class="content" style="margin-top:70px">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card">
+        <div class="card-body">
+          <div class="table-responsive">
+            <table class="table">
+              <thead class=" text-primary">
+              <th>
+                ID
+              </th>
+              <th>
+                Titulo
+              </th>
+              <th>
+                Data Publicação
+              </th>
+              <th class="text-right">
+                Jogo
+              </th>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>
+                    123456
+                  </td>
+                  <td>
+                    Microsoft finaliza compra da activion Blizzard
+                  </td>
+                  <td>
+                    16/06/2023
+                  </td>
+                  <td class="text-right">
+                    Outros
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    123456
+                  </td>
+                  <td>
+                    Microsoft finaliza compra da activion Blizzard
+                  </td>
+                  <td>
+                    16/06/2023
+                  </td>
+                  <td class="text-right">
+                    Outros
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    123456
+                  </td>
+                  <td>
+                    Microsoft finaliza compra da activion Blizzard
+                  </td>
+                  <td>
+                    16/06/2023
+                  </td>
+                  <td class="text-right">
+                    Outros
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    123456
+                  </td>
+                  <td>
+                    Microsoft finaliza compra da activion Blizzard
+                  </td>
+                  <td>
+                    16/06/2023
+                  </td>
+                  <td class="text-right">
+                    Outros
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    123456
+                  </td>
+                  <td>
+                    Microsoft finaliza compra da activion Blizzard
+                  </td>
+                  <td>
+                    16/06/2023
+                  </td>
+                  <td class="text-right">
+                    Outros
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    123456
+                  </td>
+                  <td>
+                    Microsoft finaliza compra da activion Blizzard
+                  </td>
+                  <td>
+                    16/06/2023
+                  </td>
+                  <td class="text-right">
+                    Outros
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    123456
+                  </td>
+                  <td>
+                    Microsoft finaliza compra da activion Blizzard
+                  </td>
+                  <td>
+                    16/06/2023
+                  </td>
+                  <td class="text-right">
+                    Outros
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    123456
+                  </td>
+                  <td>
+                    Microsoft finaliza compra da activion Blizzard
+                  </td>
+                  <td>
+                    16/06/2023
+                  </td>
+                  <td class="text-right">
+                    Outros
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    123456
+                  </td>
+                  <td>
+                    Microsoft finaliza compra da activion Blizzard
+                  </td>
+                  <td>
+                    16/06/2023
+                  </td>
+                  <td class="text-right">
+                    Outros
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    123456
+                  </td>
+                  <td>
+                    Microsoft finaliza compra da activion Blizzard
+                  </td>
+                  <td>
+                    16/06/2023
+                  </td>
+                  <td class="text-right">
+                    Outros
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<button class="botao-flutuante" routerLink="/criar-noticia">
+  <i class="fa fa-plus"></i>
+</button>
