--- a/ClientApp/src/app/private/private.component.html
+++ b/ClientApp/src/app/private/private.component.html
@@ -43,7 +43,7 @@
         <li routerLinkActive="active">
           <a routerLink="/jogos">
             <i class="fa-solid fa-dice-five"></i>
-            <p>Perfil usuário</p>
+            <p>Jogos</p>
           </a>
         </li>
         <li routerLinkActive="active">
