--- a/ClientApp/src/app/private/noticias/criar-noticia/criar-noticia.component.css
+++ b/ClientApp/src/app/private/noticias/criar-noticia/criar-noticia.component.css
@@ -28,7 +28,7 @@ Copyright (c) 2015 Daniel Eden
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #007bff;
+  background-color: #993399;
   color: #fff;
   border: none;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
@@ -551,7 +551,7 @@ Copyright (c) 2015 Daniel Eden
   }
 
 .btn-primary {
-  background-color: #51cbce;
+  background-color: #993399;
   color: #FFFFFF;
 }
 
