--- a/ClientApp/src/app/private/noticias/noticias.component.css
+++ b/ClientApp/src/app/private/noticias/noticias.component.css
@@ -20,7 +20,9 @@ Licensed under the MIT license - http://opensource.org/licenses/MIT
 
 Copyright (c) 2015 Daniel Eden
 */
-
+th {
+  color: #993399
+}
 .botao-flutuante {
   position: fixed;
   bottom: 20px;
@@ -28,7 +30,7 @@ Copyright (c) 2015 Daniel Eden
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #007bff;
+  background-color: #993399;
   color: #fff;
   border: none;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
@@ -551,7 +553,7 @@ Copyright (c) 2015 Daniel Eden
   }
 
 .btn-primary {
-  background-color: #51cbce;
+  background-color: #993399;
   color: #FFFFFF;
 }
 
@@ -759,7 +761,7 @@ Copyright (c) 2015 Daniel Eden
     }
 
 .btn-danger {
-  background-color: #ef8157;
+  background-color: #993399;
   color: #FFFFFF;
 }
 
@@ -783,13 +785,13 @@ Copyright (c) 2015 Daniel Eden
   fieldset[disabled] .btn-danger.focus,
   fieldset[disabled] .btn-danger:active,
   fieldset[disabled] .btn-danger.active {
-    background-color: #ef8157;
-    border-color: #ef8157;
+    background-color: #993399;
+    border-color: #993399;
   }
 
   .btn-danger.btn-simple {
-    color: #ef8157;
-    border-color: #ef8157;
+    color: #993399;
+    border-color: #993399;
   }
 
     .btn-danger.btn-simple:hover, .btn-danger.btn-simple:focus, .btn-danger.btn-simple:active {
@@ -800,7 +802,7 @@ Copyright (c) 2015 Daniel Eden
     }
 
   .btn-danger.btn-link {
-    color: #ef8157;
+    color: #993399;
   }
 
     .btn-danger.btn-link:hover, .btn-danger.btn-link:focus, .btn-danger.btn-link:active, .btn-danger.btn-link:active:focus {
@@ -987,17 +989,17 @@ Copyright (c) 2015 Daniel Eden
 
 .btn-outline-danger {
   background: transparent;
-  border: 2px solid #ef8157 !important;
-  color: #ef8157;
+  border: 2px solid #993399 !important;
+  color: #993399;
   opacity: 1;
   filter: alpha(opacity=100);
 }
 
   .btn-outline-danger:hover, .btn-outline-danger:focus, .btn-outline-danger:active, .btn-outline-danger:focus:active, .btn-outline-danger.active,
   .open > .btn-outline-danger.dropdown-toggle {
-    background-color: #ef8157 !important;
+    background-color: #993399 !important;
     color: rgba(255, 255, 255, 0.8) !important;
-    border-color: #ef8157 !important;
+    border-color: #993399 !important;
   }
 
     .btn-outline-danger:hover .caret, .btn-outline-danger:focus .caret, .btn-outline-danger:active .caret, .btn-outline-danger:focus:active .caret, .btn-outline-danger.active .caret,
@@ -1017,7 +1019,7 @@ Copyright (c) 2015 Daniel Eden
   fieldset[disabled] .btn-outline-danger:active,
   fieldset[disabled] .btn-outline-danger.active {
     background-color: transparent !important;
-    border-color: #ef8157 !important;
+    border-color: #993399 !important;
   }
 
 .btn-outline-neutral {
@@ -1091,7 +1093,7 @@ Copyright (c) 2015 Daniel Eden
   }
 
   .btn-neutral.btn-danger {
-    color: #ef8157;
+    color: #993399;
   }
 
     .btn-neutral.btn-danger:hover, .btn-neutral.btn-danger:focus, .btn-neutral.btn-danger:active, .btn-neutral.btn-danger:active:focus {
@@ -1372,8 +1374,8 @@ Copyright (c) 2015 Daniel Eden
 
 .has-danger .form-control {
   background-color: #FFC0A4;
-  border: 1px solid #ef8157;
-  color: #ef8157;
+  border: 1px solid #993399;
+  color: #993399;
 }
 
   .has-danger .form-control.form-control-danger {
@@ -1382,7 +1384,7 @@ Copyright (c) 2015 Daniel Eden
 
   .has-danger .form-control:focus {
     background-color: #FFFFFF;
-    border: 1px solid #ef8157;
+    border: 1px solid #993399;
   }
 
 .form-control + .form-control-feedback {
@@ -1551,7 +1553,7 @@ Copyright (c) 2015 Daniel Eden
 }
 
 .has-error .form-control-feedback, .has-error .control-label {
-  color: #ef8157;
+  color: #993399;
 }
 
 .has-success .form-control-feedback, .has-success .control-label {
@@ -1563,14 +1565,14 @@ Copyright (c) 2015 Daniel Eden
 }
 
   .input-group.has-danger .input-group-prepend .input-group-text {
-    border: 1px solid #ef8157;
+    border: 1px solid #993399;
     border-right: none;
   }
 
 .input-group.has-danger .error {
   display: block;
   width: 100%;
-  color: #ef8157;
+  color: #993399;
   margin-top: 3px;
 }
 
@@ -1633,7 +1635,7 @@ Copyright (c) 2015 Daniel Eden
 .has-danger.input-group-focus .input-group-append .input-group-text, .has-danger.input-group-focus
 .input-group-prepend .input-group-text {
   background-color: #FFFFFF;
-  color: #ef8157;
+  color: #993399;
 }
 
 .has-success.input-group-focus .input-group-append .input-group-text, .has-success.input-group-focus
@@ -1644,7 +1646,7 @@ Copyright (c) 2015 Daniel Eden
 
 .has-danger .form-control:focus + .input-group-append .input-group-text, .has-danger .form-control:focus +
 .input-group-prepend .input-group-text {
-  color: #ef8157;
+  color: #993399;
 }
 
 .has-success .form-control:focus + .input-group-append .input-group-text, .has-success .form-control:focus +
@@ -1691,7 +1693,7 @@ Copyright (c) 2015 Daniel Eden
 
   .input-group.has-danger .error,
   .form-group.has-danger .error {
-    color: #ef8157;
+    color: #993399;
   }
 
   .input-group[disabled] .input-group-prepend .input-group-text,
@@ -1944,7 +1946,7 @@ a.text-warning:focus, a.text-warning:hover {
 
 .text-danger,
 a.text-danger:focus, a.text-danger:hover {
-  color: #ef8157 !important;
+  color: #993399 !important;
 }
 
 .text-gray,
@@ -1976,12 +1978,12 @@ a.text-gray:focus, a.text-gray:hover {
     }
 
   .blockquote.blockquote-danger {
-    border-color: #ef8157;
-    color: #ef8157;
+    border-color: #993399;
+    color: #993399;
   }
 
     .blockquote.blockquote-danger small {
-      color: #ef8157;
+      color: #993399;
     }
 
   .blockquote.blockquote-white {
@@ -2155,8 +2157,8 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
 }
 
 .badge.badge-danger {
-  border-color: #ef8157;
-  background-color: #ef8157;
+  border-color: #993399;
+  background-color: #993399;
 }
 
 .badge.badge-neutral {
@@ -2610,7 +2612,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
 }
 
 .bg-danger {
-  background-color: #ef8157 !important;
+  background-color: #993399 !important;
 }
 
 .bg-warning {
@@ -3069,11 +3071,11 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
     }
 
   .dropdown-actions .dropdown-item .link-danger {
-    color: #ef8157;
+    color: #993399;
   }
 
     .dropdown-actions .dropdown-item .link-danger:hover, .dropdown-actions .dropdown-item .link-danger:active, .dropdown-actions .dropdown-item .link-danger:focus {
-      color: #ef8157;
+      color: #993399;
     }
 
 .dropdown-actions li:hover a,
@@ -3293,7 +3295,7 @@ License - nucleoapp.com/license/
   font-family: 'nucleo-icons';
   /*src: url("../../assets/fonts/nucleo-icons.eot");
   src: url("../../assets/fonts/nucleo-icons.eot") format("embedded-opentype"), url("../../assets/fonts/nucleo-icons.woff2") format("woff2"), url("../../assets/fonts/nucleo-icons.woff") format("woff"), url("../../assets/fonts/nucleo-icons.ttf") format("truetype") format("svg");
-*/  font-weight: normal;
+*/ font-weight: normal;
   font-style: normal;
 }
 /**/
@@ -4411,7 +4413,7 @@ License - nucleoapp.com/license/
   .off-canvas-sidebar[data-active-color="danger"] .nav li.active > a[data-toggle="collapse"] i,
   .off-canvas-sidebar[data-active-color="danger"] .nav li.active > a[data-toggle="collapse"] ~ div > ul > li.active .sidebar-mini-icon,
   .off-canvas-sidebar[data-active-color="danger"] .nav li.active > a[data-toggle="collapse"] ~ div > ul > li.active > a {
-    color: #ef8157;
+    color: #993399;
     opacity: 1;
   }
 
@@ -4672,7 +4674,7 @@ License - nucleoapp.com/license/
   }
 
   .fixed-plugin .badge-red {
-    background-color: #ef8157;
+    background-color: #993399;
   }
 
   .fixed-plugin h5 {
@@ -4932,7 +4934,7 @@ License - nucleoapp.com/license/
     }
 
   .card[data-background-color="red"] {
-    background-color: #ef8157;
+    background-color: #993399;
   }
 
   .card[data-background-color="yellow"] {
@@ -5820,5 +5822,6 @@ License - nucleoapp.com/license/
     padding: 15px;
   }
 }
+
 
 /*# sourceMappingURL=paper-dashboard.css.map */
