--- a/ClientApp/src/app/private/private.component.css
+++ b/ClientApp/src/app/private/private.component.css
@@ -737,7 +737,7 @@ Copyright (c) 2015 Daniel Eden
     }
 
 .btn-danger {
-  background-color: #ef8157;
+  background-color: #993399;
   color: #FFFFFF;
 }
 
@@ -761,13 +761,13 @@ Copyright (c) 2015 Daniel Eden
   fieldset[disabled] .btn-danger.focus,
   fieldset[disabled] .btn-danger:active,
   fieldset[disabled] .btn-danger.active {
-    background-color: #ef8157;
-    border-color: #ef8157;
+    background-color: #993399;
+    border-color: #993399;
   }
 
   .btn-danger.btn-simple {
-    color: #ef8157;
-    border-color: #ef8157;
+    color: #993399;
+    border-color: #993399;
   }
 
     .btn-danger.btn-simple:hover, .btn-danger.btn-simple:focus, .btn-danger.btn-simple:active {
@@ -778,7 +778,7 @@ Copyright (c) 2015 Daniel Eden
     }
 
   .btn-danger.btn-link {
-    color: #ef8157;
+    color: #993399;
   }
 
     .btn-danger.btn-link:hover, .btn-danger.btn-link:focus, .btn-danger.btn-link:active, .btn-danger.btn-link:active:focus {
@@ -965,17 +965,17 @@ Copyright (c) 2015 Daniel Eden
 
 .btn-outline-danger {
   background: transparent;
-  border: 2px solid #ef8157 !important;
-  color: #ef8157;
+  border: 2px solid #993399 !important;
+  color: #993399;
   opacity: 1;
   filter: alpha(opacity=100);
 }
 
   .btn-outline-danger:hover, .btn-outline-danger:focus, .btn-outline-danger:active, .btn-outline-danger:focus:active, .btn-outline-danger.active,
   .open > .btn-outline-danger.dropdown-toggle {
-    background-color: #ef8157 !important;
+    background-color: #993399 !important;
     color: rgba(255, 255, 255, 0.8) !important;
-    border-color: #ef8157 !important;
+    border-color: #993399 !important;
   }
 
     .btn-outline-danger:hover .caret, .btn-outline-danger:focus .caret, .btn-outline-danger:active .caret, .btn-outline-danger:focus:active .caret, .btn-outline-danger.active .caret,
@@ -995,7 +995,7 @@ Copyright (c) 2015 Daniel Eden
   fieldset[disabled] .btn-outline-danger:active,
   fieldset[disabled] .btn-outline-danger.active {
     background-color: transparent !important;
-    border-color: #ef8157 !important;
+    border-color: #993399 !important;
   }
 
 .btn-outline-neutral {
@@ -1069,7 +1069,7 @@ Copyright (c) 2015 Daniel Eden
   }
 
   .btn-neutral.btn-danger {
-    color: #ef8157;
+    color: #993399;
   }
 
     .btn-neutral.btn-danger:hover, .btn-neutral.btn-danger:focus, .btn-neutral.btn-danger:active, .btn-neutral.btn-danger:active:focus {
@@ -1350,8 +1350,8 @@ Copyright (c) 2015 Daniel Eden
 
 .has-danger .form-control {
   background-color: #FFC0A4;
-  border: 1px solid #ef8157;
-  color: #ef8157;
+  border: 1px solid #993399;
+  color: #993399;
 }
 
   .has-danger .form-control.form-control-danger {
@@ -1360,7 +1360,7 @@ Copyright (c) 2015 Daniel Eden
 
   .has-danger .form-control:focus {
     background-color: #FFFFFF;
-    border: 1px solid #ef8157;
+    border: 1px solid #993399;
   }
 
 .form-control + .form-control-feedback {
@@ -1529,7 +1529,7 @@ Copyright (c) 2015 Daniel Eden
 }
 
 .has-error .form-control-feedback, .has-error .control-label {
-  color: #ef8157;
+  color: #993399;
 }
 
 .has-success .form-control-feedback, .has-success .control-label {
@@ -1541,14 +1541,14 @@ Copyright (c) 2015 Daniel Eden
 }
 
   .input-group.has-danger .input-group-prepend .input-group-text {
-    border: 1px solid #ef8157;
+    border: 1px solid #993399;
     border-right: none;
   }
 
 .input-group.has-danger .error {
   display: block;
   width: 100%;
-  color: #ef8157;
+  color: #993399;
   margin-top: 3px;
 }
 
@@ -1611,7 +1611,7 @@ Copyright (c) 2015 Daniel Eden
 .has-danger.input-group-focus .input-group-append .input-group-text, .has-danger.input-group-focus
 .input-group-prepend .input-group-text {
   background-color: #FFFFFF;
-  color: #ef8157;
+  color: #993399;
 }
 
 .has-success.input-group-focus .input-group-append .input-group-text, .has-success.input-group-focus
@@ -1622,7 +1622,7 @@ Copyright (c) 2015 Daniel Eden
 
 .has-danger .form-control:focus + .input-group-append .input-group-text, .has-danger .form-control:focus +
 .input-group-prepend .input-group-text {
-  color: #ef8157;
+  color: #993399;
 }
 
 .has-success .form-control:focus + .input-group-append .input-group-text, .has-success .form-control:focus +
@@ -1669,7 +1669,7 @@ Copyright (c) 2015 Daniel Eden
 
   .input-group.has-danger .error,
   .form-group.has-danger .error {
-    color: #ef8157;
+    color: #993399;
   }
 
   .input-group[disabled] .input-group-prepend .input-group-text,
@@ -1922,7 +1922,7 @@ a.text-warning:focus, a.text-warning:hover {
 
 .text-danger,
 a.text-danger:focus, a.text-danger:hover {
-  color: #ef8157 !important;
+  color: #993399 !important;
 }
 
 .text-gray,
@@ -1954,12 +1954,12 @@ a.text-gray:focus, a.text-gray:hover {
     }
 
   .blockquote.blockquote-danger {
-    border-color: #ef8157;
-    color: #ef8157;
+    border-color: #993399;
+    color: #993399;
   }
 
     .blockquote.blockquote-danger small {
-      color: #ef8157;
+      color: #993399;
     }
 
   .blockquote.blockquote-white {
@@ -2133,8 +2133,8 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
 }
 
 .badge.badge-danger {
-  border-color: #ef8157;
-  background-color: #ef8157;
+  border-color: #993399;
+  background-color: #993399;
 }
 
 .badge.badge-neutral {
@@ -2588,7 +2588,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
 }
 
 .bg-danger {
-  background-color: #ef8157 !important;
+  background-color: #993399 !important;
 }
 
 .bg-warning {
@@ -3047,11 +3047,11 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
     }
 
   .dropdown-actions .dropdown-item .link-danger {
-    color: #ef8157;
+    color: #993399;
   }
 
     .dropdown-actions .dropdown-item .link-danger:hover, .dropdown-actions .dropdown-item .link-danger:active, .dropdown-actions .dropdown-item .link-danger:focus {
-      color: #ef8157;
+      color: #993399;
     }
 
 .dropdown-actions li:hover a,
@@ -4389,7 +4389,7 @@ License - nucleoapp.com/license/
   .off-canvas-sidebar[data-active-color="danger"] .nav li.active > a[data-toggle="collapse"] i,
   .off-canvas-sidebar[data-active-color="danger"] .nav li.active > a[data-toggle="collapse"] ~ div > ul > li.active .sidebar-mini-icon,
   .off-canvas-sidebar[data-active-color="danger"] .nav li.active > a[data-toggle="collapse"] ~ div > ul > li.active > a {
-    color: #ef8157;
+    color: #993399;
     opacity: 1;
   }
 
@@ -4650,7 +4650,7 @@ License - nucleoapp.com/license/
   }
 
   .fixed-plugin .badge-red {
-    background-color: #ef8157;
+    background-color: #993399;
   }
 
   .fixed-plugin h5 {
@@ -4910,7 +4910,7 @@ License - nucleoapp.com/license/
     }
 
   .card[data-background-color="red"] {
-    background-color: #ef8157;
+    background-color: #993399;
   }
 
   .card[data-background-color="yellow"] {
